# AIOS

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  SECURITY.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
aictl/: __init__.py  __main__.py  mcp_server.py  sdk.py
docs/: AI_NATIVE_LINUX_OS_SPEC.md  IMPROVEMENTS.md  OPERATIONS.md  QUICKSTART.md  RESEARCH_MATRIX.md  SDK.md  SPECIFICATION.md
examples/: grafana-dashboard.json  local-chat.json  ollama.container  open-webui.container  prometheus-alerts.yml  stack.local-rag.yaml  team-rag.json
go-port/: Makefile  go.mod  go.sum
scripts/: install.sh
tests/: test_100_points.py  test_aictl.py  test_apple_hig.py  test_apple_silicon.py  test_cache_warm.py  test_cascade_routing.py  test_category_audit_fixes.py  test_category_audit_fixes_10.py  test_category_audit_fixes_11.py  test_category_audit_fixes_12.py  test_category_audit_fixes_13.py  test_category_audit_fixes_14.py  test_category_audit_fixes_15.py  test_category_audit_fixes_16.py  test_category_audit_fixes_17.py  test_category_audit_fixes_18.py  test_category_audit_fixes_19.py  test_category_audit_fixes_2.py  test_category_audit_fixes_20.py  test_category_audit_fixes_21.py  test_category_audit_fixes_22.py  test_category_audit_fixes_23.py  test_category_audit_fixes_26.py  test_category_audit_fixes_27.py  test_category_audit_fixes_28.py  test_category_audit_fixes_29.py  test_category_audit_fixes_3.py  test_category_audit_fixes_30.py  (+130 more)
(+221 files in other folders)
